@@ -2,7 +2,7 @@ sg3-utils (1.37-0.1) unstable; urgency=low
 
   * New upstream version
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Mon, 03 Jun 2013 16:00:00 -0400
+ -- Douglas Gilbert <dgilbert@interlog.com>  Fri, 14 Jun 2013 02:00:00 +0200
 
 sg3-utils (1.36-0.1) unstable; urgency=low
 
