@@ -2,8 +2,10 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.37 [20130604] [svn: r498]
+Changelog for sg3_utils-1.37 [20130614] [svn: r499]
   - sg_compare_and_write: fix wrprotect setting
+  - sg_inq: fix referrals VPD page
+  - Makefile.am cleanup
 
 Changelog for sg3_utils-1.36 [20130531] [svn: r497]
   - sg_vpd: Protocol-specific port information VPD page
